added Feedback functionality
everyone:
-view feedback and likes
-view comments and likes

logined members:
-post feedback
-post comment
-like feedback
-like comment

limitation: cannot use enter sign, comment title must not have special characters.

--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -113,6 +113,19 @@ h2.roleTitle{
     min-width:450px;
 }
 
+.feedback-content-box{
+    background: rgba(240,240,240,0.85);
+    border-radius:10px;
+    padding:15px;
+    
+}
+
+.like-box{
+    padding-left:10px;
+    padding-right:10px;
+    display:inline-block;
+}
+
 .ui-messages-error-icon{
     display:none;
 }
