import fonts edit navbar

--- a/MerlionPortal/MerlionPortal-war/web/css/login.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/login.css
@@ -1,5 +1,5 @@
 .bg-img{
-    background: url('../img/bgimgcargocrop_1.jpg') no-repeat center center fixed;
+    background: url('../img/login-bg.png') no-repeat top center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
