--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -1,6 +1,34 @@
-.html{
-    
+@font-face{
+    font-family: 'Raleway';
+    src: url("#{resource['fonts/Raleway-Regular.ttf']}") format('truetype');
+        font-weight: normal;
+        font-style: normal;
 }
+
+.content-font{
+    font-family: 'Raleway', Arial, sans-serif;
+}
+.title-font{
+    font-family: 'Berlin sans FB' !important;
+    font-weight: bold;
+}
+
+.top-nav{
+    background-color: #1c1c1d;
+    height:25px;
+}
+.navbar-default{
+    background-color: rgba(0,0,0,0.6);
+    border-color: transparent;
+}
+.navbar-default .navbar-nav>li>a{
+    color: white;
+    font-size: 15px;
+}
+.nav>li>a:hover, .nav>li>a:focus{
+    color: #d96f70 !important;
+}
+
 .form-control-spacing{
     margin-top:5px;
     margin-bottom:5px;
@@ -185,6 +213,7 @@ html {
 }
 body{
     min-height: 100%;
+    font-family: 'Raleway', Arial, sans-serif;
 }
 .wrapper {
     min-height: 652px;
