--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/imports.xhtml
@@ -17,6 +17,10 @@
             <script src="${root}/js/bootstrap.min.js" type="text/javascript"></script>
             <script src="${root}/js/notify.min.js" type="text/javascript"></script>
             <script src="${root}/js/merlionportal.js" type="text/javascript"></script>
+                    
+            <!--Import fonts-->
+            <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway" type="text/css" />
+            
         </ui:composition>
     </head>
 </html>
