--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
@@ -24,20 +24,17 @@
                                         <li><a href="#">Coming Soon</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Coming Soon<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">Coming Soon</a></li>
-                                        <li><a href="#">Coming Soon</a></li>
-                                    </ul>
-                                </li>
                             </ul>
                             <h:form>
                                 <li class="dropdown nav navbar-nav navbar-right header-push-bottom"><a href="#"  class="dropdown-toggle black-link" data-toggle="dropdown"><h:outputText value="${dashboardBean.loginedUser.firstName}"/><span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#"><i class="glyphicon glyphicon-envelope"></i>  Messages</a></li>
+                                        <li><a href="${root}/user/message.xhtml"><i class="glyphicon glyphicon-envelope"></i>  Messages</a></li>
                                         <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
                                     </ul>
                                 </li>
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li><a href="${root}/feedback.xhtml">Feedback</a></li>
+                                </ul>
                             </h:form>
                         </div>
                     </div>
