--- a/MerlionPortal/MerlionPortal-war/web/css/crms.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/crms.css
@@ -20,3 +20,7 @@ and open the template in the editor.
     display:inline; 
     color: grey;
 }
+.contractsteps{
+    margin-bottom: 15px;
+    margin-left: 80px;
+}
