--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
@@ -20,8 +20,7 @@
                                 <li><a href="${root}/user/dashboard.xhtml">Dashboard</a></li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Logs<span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#">View Logs</a></li>
-                                        <li><a href="#">Coming Soon</a></li>
+                                        <li><a href="${root}/viewsystemlog.xhtml">View My Logs</a></li>
                                     </ul>
                                 </li>
                             </ul>
