--- a/MerlionPortal/MerlionPortal-war/web/templates/messaging/inbox.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/messaging/inbox.xhtml
@@ -138,12 +138,12 @@
                 <div class="row">
                     <c:choose> 
                         <c:when test="${empty messagerBean.inbox}">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 No messages found. Start sending a <span class="message-link text-primary" onclick="openEditor();">message</span> today!
                             </div>
                         </c:when>
                         <c:otherwise>
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <h4>Messages</h4>
                                 <ul id="inboxMessages" class="list-group">
                                     <c:forEach items="#{messagerBean.inbox}" var="message">
@@ -158,12 +158,45 @@
                                     </c:forEach>
                                 </ul>
                             </div>
-                            <div class="col-md-8">
+                            <div class="col-md-2">
                                 <div id="messageReader" class="hide">
                                     <h2 id="readMsgTitle"></h2>
                                     <div id="readMsgSender"></div>
                                     <div id="readMsgContent"></div>
                                     <button id="replyBtn" class="btn btn-primary">Reply</button>
+                                    <button id="deleteBtn" class="btn btn-danger">Delete</button>
+                                </div>
+                            </div>
+                        </c:otherwise>
+                    </c:choose>
+                    <c:choose> 
+                        <c:when test="${empty messagerBean.outbox}">
+                            <div class="col-md-6">
+                                No messages found. Start sending a <span class="message-link text-primary" onclick="openEditor();">message</span> today!
+                            </div>
+                        </c:when>
+                        <c:otherwise>
+                            <div class="col-md-6">
+                                <h4>Messages</h4>
+                                <ul id="inboxMessages" class="list-group">
+                                    <c:forEach items="#{messagerBean.outbox}" var="message">
+                                        <c:choose>
+                                            <c:when test="#{message.status == 9990}">
+                                                <li id="msg_#{message.messageId}" class="list-group-item list-group-item-info pointer" onclick="readMail(this,#{message.messageId});">#{message.messageTitle}</li>
+                                            </c:when>
+                                            <c:when test="#{message.status == 9991}">
+                                                <li id="msg_#{message.messageId}" class="list-group-item pointer" onclick="readMail(this,#{message.messageId});">#{message.messageTitle}</li>
+                                            </c:when>
+                                        </c:choose>
+                                    </c:forEach>
+                                </ul>
+                            </div>
+                            <div class="col-md-2">
+                                <div id="messageReader" class="hide">
+                                    <h2 id="readMsgTitle"></h2>
+                                    <div id="readMsgSender"></div>
+                                    <div id="readMsgContent"></div>
+                                    <button id="replyBtn" class="btn btn-primary">Forward</button>
                                     <button id="deleteBtn" class="btn btn-danger">Delete</button>
                                 </div>
                             </div>
