--- a/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
@@ -16,3 +16,10 @@
     box-shadow: 0 0 5px #444;
     cursor:pointer;
 }
+
+/////////////////
+#circle-container { width: 600px; height: 600px; border: 1px solid #000; position: relative; }
+#center { width: 10px; height: 10px; position: absolute; left: 295px; top: 295px; background: #000; }
+.field { width: 20px; height: 20px; position: absolute; background: #f00; }
+#crosshair-x { width: 600px; height: 1px; background: #000; position: absolute; left: 0; top: 300px; }
+#crosshair-y { width: 1px; height: 600px; background: #000; position: absolute; left: 300px; top: 0; }
