--- a/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/merlionportal.css
@@ -9,8 +9,8 @@
     font-family: 'Raleway', Arial, sans-serif;
 }
 .title-font{
-    font-family: 'Berlin sans FB' !important;
-    font-weight: bold;
+    font-family: 'Berlin sans fb', sans-serif !important;
+    font-weight: 500;
 }
 
 .top-nav{
@@ -23,10 +23,13 @@
 }
 .navbar-default .navbar-nav>li>a{
     color: white;
-    font-size: 15px;
+    font-size: 18px;
 }
 .nav>li>a:hover, .nav>li>a:focus{
     color: #d96f70 !important;
+}
+.navbar-nav{
+    margin: 4px;
 }
 
 .form-control-spacing{
@@ -48,11 +51,6 @@
 }
 .header-push-bottom{
     margin-top:15px;
-}
-
-li > .black-link{
-    color:#FFF;
-    text-decoration: none;
 }
 
 .input-addon-fixedwidth{
