--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/admin/navigation.xhtml
@@ -11,15 +11,16 @@
             <c:set var="root" value="${request.contextPath}" />
             <nav>
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
+                    <div class="top-nav"></div>
                     <div class="container">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="${root}/index.xhtml">Merlion Portal</a>
+                            <img src="${root}/img/header-logo.png" style="height: 60px " />
                         </div>
                         <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav">
+                            <ul class="nav navbar-nav title-font" style="padding-left:25px">
                                 <li><a href="${root}/admin/dashboard.xhtml">Dashboard</a></li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Users<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
+                                    <ul class="dropdown-menu content-font" role="menu">
                                         <li><a href="${root}/admin/createuser.xhtml">Create User</a></li>
                                         <li><a href="${root}/admin/viewusers.xhtml">View Users</a></li>
                                         <c:if test ="#{dashboardBean.loginedUser.userType == 'superuser'}">
@@ -28,29 +29,37 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Roles<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
+                                    <ul class="dropdown-menu content-font" role="menu">
                                         <li><a href="${root}/admin/createrole.xhtml">Create Role</a></li>
                                         <li><a href="${root}/admin/viewroles.xhtml">View Roles</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Logs<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Logs
+                                        <span class="caret"></span></a>
+                                    <ul class="dropdown-menu content-font" role="menu">
                                         <li><a href="${root}/viewsystemlog.xhtml">View Logs</a></li>
                                     </ul>
                                 </li>
                             </ul>
+                            
                             <h:form>
-                                <li class="dropdown nav navbar-nav navbar-right header-push-bottom"><a href="#"  class="dropdown-toggle black-link" data-toggle="dropdown"><h:outputText value="${dashboardBean.loginedUser.firstName}"/><span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="${root}/admin/message.xhtml"><i class="glyphicon glyphicon-envelope"></i>  Messages</a></li>
-                                        <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
-                                    </ul>
-                                </li>
-                                <ul class="nav navbar-nav navbar-right">
+                                <ul class="nav navbar-nav pull-right">
                                     <li><a href="${root}/feedback.xhtml">Feedback</a></li>
+                                    <li class="dropdown">
+                                        <a href="#"  class="dropdown-toggle" data-toggle="dropdown">
+                                            <h:outputText value="${dashboardBean.loginedUser.firstName}"/>
+                                            <span class="caret"></span></a>
+                                        <ul class="dropdown-menu content-font" role="menu">
+                                            <li><a href="${root}/admin/message.xhtml"><i class="glyphicon glyphicon-envelope"></i>Messages</a></li>
+                                            <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
+                                        </ul>
+                                    </li>
+                                    
                                 </ul>
                             </h:form>
-                        </div><!--/.nav-collapse -->
+                        
+                        </div>
                     </div>
                 </div>
             </nav>
