--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/user/navigation.xhtml
@@ -11,29 +11,37 @@
             <c:set var="root" value="${request.contextPath}" />
             <nav>
                 <div class="navbar navbar-default navbar-static-top" role="navigation">
+                    <div class="top-nav"></div>
                     <div class="container">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="${root}/index.xhtml">Merlion Portal</a>
+                            <img src="${root}/img/header-logo.png" style="height: 60px " />
                         </div>
                         <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav">
+                            <ul class="nav navbar-nav title-font" style="padding-left:25px">
                                 <li><a href="${root}/user/dashboard.xhtml">Dashboard</a></li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Logs<span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
+                                    <ul class="dropdown-menu content-font" role="menu">
                                         <li><a href="${root}/viewsystemlog.xhtml">View My Logs</a></li>
                                     </ul>
                                 </li>
                             </ul>
                             <h:form>
-                                <li class="dropdown nav navbar-nav navbar-right header-push-bottom"><a href="#"  class="dropdown-toggle black-link" data-toggle="dropdown"><h:outputText value="${dashboardBean.loginedUser.firstName}"/><span class="caret"></span></a>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="${root}/user/message.xhtml"><i class="glyphicon glyphicon-envelope"></i>  Messages</a></li>
-                                        <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
-                                    </ul>
-                                </li>
+                                <ul class="nav navbar-nav pull-right">
+                                    
+                                </ul>
                                 <ul class="nav navbar-nav navbar-right">
                                     <li><a href="${root}/feedback.xhtml">Feedback</a></li>
                                 </ul>
+                                <li class="dropdown">
+                                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown">
+                                        <h:outputText value="${dashboardBean.loginedUser.firstName}"/>
+                                        <span class="caret"></span></a>
+                                    <ul class="dropdown-menu content-font" role="menu">
+                                        <li><a href="${root}/user/message.xhtml"><i class="glyphicon glyphicon-envelope"></i>Messages</a></li>
+                                        <li><h:commandLink actionListener="#{logoutManagerBean.logout}">Logout</h:commandLink></li>
+                                    </ul>
+                                </li>
+                                
                             </h:form>
                         </div>
                     </div>
