--- a/MerlionPortal/MerlionPortal-war/web/templates/messaging/inbox.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/messaging/inbox.xhtml
@@ -130,7 +130,7 @@
                         </h2>
                     </div>
                     <div class="col-md-2">
-                        <h2>Outbox
+                        <h2>
                             <button class="btn btn-primary" onclick="openEditor();">Write Message <i class="glyphicon glyphicon-pencil"></i></button>
                         </h2>
                     </div>
@@ -153,7 +153,7 @@
                         </c:when>
                         <c:otherwise>
                             <div class="col-md-2">
-                                <h4>Messages</h4>
+                                <h4>Inbox Messages</h4>
                                 <ul id="inboxMessages" class="list-group">
                                     <c:forEach items="#{messagerBean.inbox}" var="message">
                                         <c:choose>
@@ -169,6 +169,14 @@
                             </div>
                         </c:otherwise>
                     </c:choose>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        <h2>Outbox
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">
                     <c:choose> 
                         <c:when test="${empty messagerBean.outbox}">
                             <div class="col-md-6">
@@ -177,7 +185,7 @@
                         </c:when>
                         <c:otherwise>
                             <div class="col-md-2">
-                                <h4>Messages</h4>
+                                <h4>Outbox Messages</h4>
                                 <ul id="inboxMessages" class="list-group">
                                     <c:forEach items="#{messagerBean.outbox}" var="message">
                                         <c:choose>
