--- a/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
+++ b/MerlionPortal/MerlionPortal-war/web/css/dashboard.css
@@ -1,14 +1,52 @@
 .dashboard-box{
     margin:5px;
     display:inline-block;
+    border-radius: 10px;
+    height:200px;
+    max-width:200px;
 }
 .dashboard-content{
     text-align: center;
     margin:50px 0px 80px 0px;
 }
-/*.dashboard-box:hover{
-    background:#cecece;
+///////////////////////
+/*.dashboard-tile{
+    position:absolute;
+    background-color: maroon;
+    color:white;
+    text-align: center;
+    vertical-align:central;
 }*/
+
+.tile-texts{
+    color:white;
+}
+
+.tile-area{
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
+    position:relative;
+}
+.crmstile{
+    background: url('../img/tile-crms.jpg') no-repeat -40px -12px;
+}
+
+.wmstile{ 
+    background: url('../img/tile-wms.jpg');
+}
+.oestile{
+    background: url('../img/tile-oes.jpg');
+}
+.mrptile{
+    background: url('../img/tile-mrp.jpg');
+}
+.tmstile{
+    background: url('../img/tile-tms.jpg');
+}
+.grnstile{
+    background: url('../img/tile-grns.jpg');
+}
 
 .highlight {
     -webkit-box-shadow: 0 0 5px #444;
@@ -17,9 +55,4 @@
     cursor:pointer;
 }
 
-/////////////////
-#circle-container { width: 600px; height: 600px; border: 1px solid #000; position: relative; }
-#center { width: 10px; height: 10px; position: absolute; left: 295px; top: 295px; background: #000; }
-.field { width: 20px; height: 20px; position: absolute; background: #f00; }
-#crosshair-x { width: 600px; height: 1px; background: #000; position: absolute; left: 0; top: 300px; }
-#crosshair-y { width: 1px; height: 600px; background: #000; position: absolute; left: 300px; top: 0; }
+
