--- a/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/template.xhtml
@@ -35,9 +35,10 @@
                     </ui:insert>
                 </div>
                 <div class="push"></div>
+                <div class="footer"></div>
             </div>
-
         </ui:insert>
+
     </h:body>
 </html>
 
