--- a/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/templateuser.xhtml
@@ -36,9 +36,9 @@
             </div>
         </div>
         <!-- Footer -->
-<!--        <ui:insert name="footer" >
+        <ui:insert name="footer" >
             <ui:include src="/templates/snippets/footer.xhtml" />
-        </ui:insert>-->
+        </ui:insert>
     </h:body>
 </html>
 
