--- a/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/templates/snippets/footer.xhtml
@@ -7,11 +7,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <body>
         <ui:composition>
-            <div class="footer" align="center">
+            <div class="nav navbar-default footer">
                 <div class="container">
-                    <a href="${request.contextPath}/index.xhtml">Home</a>
-                    <span>Contact Us at: +65 98373234</span>
-                    <span>&nbsp; Copyright (c) 2014</span>
+                    <ul class="nav navbar-nav title-font">
+                        <li><a href="${request.contextPath}/index.xhtml">Home</a></li>
+                        <li><a href="${request.contextPath}/servicedescription.xhtml">Services</a></li>
+                        <li><a href="#">Clients</a></li>
+                    </ul>
+                    <li class="nav navbar-nav navbar-right">Copyright (c) 2014</li>
                 </div>
             </div>
         </ui:composition>
